Crash when mutating SVG text with transform https://bugs.webkit.org/show_bug.cgi?id=126744

Reviewed by Dirk Schulze.

Source/WebCore:

Test: svg/custom/mutation-text-transform-crash.html

Text-transform property triggers subtreeTextDidChange when an SVG text renderer is
being added to the render tree. The function assumes the child is already fully in the tree
but in this case we are still in middle of adding it.

* rendering/svg/RenderSVGText.cpp:
(WebCore::RenderSVGText::subtreeTextDidChange):

    Bail out if the changed RenderSVGInlineText can't be found from m_layoutAttributes.
    This means that subtreeChildWasAdded hasn't been invoked yet for it and there is nothing
    to update. The required updates will happen in subtreeChildWasAdded.

LayoutTests:

* svg/custom/mutation-text-transform-crash-expected.txt: Added.
* svg/custom/mutation-text-transform-crash.html: Added.



Canonical link: https://commits.webkit.org/144640@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161630 268f45cc-cd09-0410-ab3c-d52691b4dbfc